--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@instantdb/core": "^0.14.12",
     "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.447.0",
     "sst": "3.1.49",
     "svelte-inview": "^4.0.4",
     "svelte-kit-sst": "2.43.5",
